# Galley.jl

./: .gitignore  Manifest.toml  README.md  galley_example.jl  notes.txt  pyproject.toml  run_bfs_experiments.sh  run_inference_experiments.sh  run_matrix_experiments.sh  run_subgraph_experiments.sh  unzip_graph_data.sh
Experiments/: experiment_params.jl  run_experiments.jl  run_experiments_worker.jl  subgraph_sql.jl  subgraph_workload.jl
Experiments/Benchmark/Large/: subgraph_benchmark.jl  subgraph_benchmark_stats.jl
Experiments/Data/Subgraph_Data/human/: human.txt
Experiments/Data/Subgraph_Queries/lubm80/: lubm80_Q12.txt  lubm80_Q2.txt  lubm80_Q4.txt  lubm80_Q7.txt  lubm80_Q8.txt  lubm80_Q9.txt
Experiments/Data/Subgraph_TrueCardinalities/dblp/: query_dense_16_1.graph  query_dense_16_10.graph  query_dense_16_100.graph  query_dense_16_101.graph  query_dense_16_102.graph  query_dense_16_103.graph  query_dense_16_104.graph  query_dense_16_105.graph  query_dense_16_106.graph  (+1082 more)
Experiments/Scripts/: matrix_chain_galley.jl  matrix_chain_pytorch.py  tpc_inference_modin.py  tpc_inference_pandas.py  tpc_inference_polars.py  tpc_script_inference.jl  tpch_inference.jl  tpch_inference_polars.py  tpch_new_graph.jl  unzip_graph_data.sh
src/: Galley.jl
src/ExecutionEngine/: execution-engine.jl
src/FAQOptimizer/: annotated-query.jl
src/PhysicalOptimizer/: format-selector.jl  protocol-selector.jl
src/PlanAST/: algebra.jl  plan.jl
src/TensorStats/: cost-estimates.jl  tensor-stats_v2.jl
tpch-dbgen/: CMakeLists.txt  README.md
tpch-dbgen/src/: varsub.c
(+3665 files in other folders)
