[project]
name = "galley-jl"
version = "0.1.0"
description = ""
authors = [
    {name = "kylebd99",email = "kdeeds@cs.washington.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "threadpoolctl (>=3.6.0,<4.0.0)",
    "polars (>=1.32.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "galley"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
